@@ -1,7 +1,6 @@
 package org.prisching.tobias.Sudoku.game;
 
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.HashMap;
 
 import org.prisching.tobias.Sudoku.board.Board;
@@ -10,44 +9,41 @@ import org.prisching.tobias.Sudoku.board.Position;
 import org.prisching.tobias.Sudoku.game.player.Player;
 import org.prisching.tobias.Sudoku.game.player.PlayerID;
 
+/**
+ * The GameController controls a single game and handles it operations
+ */
 public class GameController {
 
+	/** Number of points of an unready player */
 	private final static int POINTS_UNREADY = -1;
+
+	/** Number of points of a player who is ready */
 	private final static int POINTS_READY = 0;
-	
-	private final GameID gameID;
-	private final String name;
+
+	/** The game to control */
+	private final Game game;
+
+	/** The identifier of the master of the game, i.e. who created the game */
 	private final PlayerID master;
-	private final int difficulty;
-	
-	private Map<PlayerID, Integer> points;
-	private BoardManager boardManager;
+
+	private final Map<PlayerID, Integer> points;
+	private final BoardManager boardManager;
 	private EGameState gameState;
 	
 	public GameController(PlayerID master, String name, int difficulty) {
-		this.gameID = new GameID();
-		this.name = name;
+		this.game = new Game(name, difficulty);
 		this.master = master;
-		this.difficulty = difficulty;
-		this.points = new HashMap<PlayerID, Integer>();
+		this.points = new HashMap<>();
 		this.boardManager = new BoardManager(difficulty);
 		this.gameState = EGameState.READY;
 	}
-	
-	public GameID getID() {
-		return this.gameID;
+
+	public Game getGame() {
+		return this.game;
 	}
-	
-	public String getName() {
-		return this.name;
-	}
-	
+
 	public PlayerID getMaster() {
 		return this.master;
-	}
-	
-	public int getDifficulty() {
-		return this.difficulty;
 	}
 	
 	public Map<PlayerID, Integer> getPoints() {
@@ -59,7 +55,7 @@ public class GameController {
 	}
 	
 	public int countReadyPlayers() {
-		return this.points.values().stream().filter(p -> p == POINTS_READY).collect(Collectors.toList()).size();
+		return this.points.values().stream().filter(p -> p == POINTS_READY).toList().size();
 	}
 	
 	public int countTotalPlayers() {
@@ -88,16 +84,16 @@ public class GameController {
 		}
 	}
 	
-	public void setValue(Player player, Position pos, int value) {
+	public void setFieldValue(Player player, Position pos, int value) {
 		if(this.gameState.equals(EGameState.ONGOING)) {
 			if(this.points.containsKey(player.getID())) {
-				this.points.put(player.getID(), this.points.get(player.getID()).intValue() + this.boardManager.setField(pos, value, player.getColor()).points());
+				this.points.put(player.getID(), this.points.get(player.getID()) + this.boardManager.setField(pos, value, player.getColor()).points());
 			}
 			if(this.boardManager.isPlayBoardFull()) this.gameState = EGameState.FINISHED;
 		}
 	}
 	
-	public void setValue(Player player, Field field) {
-		this.setValue(player, field.getPos(), field.getValue());
+	public void setFieldValue(Player player, Field field) {
+		this.setFieldValue(player, field.getPos(), field.getValue());
 	}
 }
